@@ -2189,5 +2189,1147 @@ Collections 工具类的 sort 方法有两种重载的形式，
 
 第二种不强制性的要求容器中的元素必须可比较，但是要求传入第二个参数，参数是Comparator 接口的子类型（需要重写 compare 方法实现元素的比较），相当于一个临时定义的排序规则，其实就是通过接口注入比较元素大小的算法，也是对回调模式的应用（Java 中对函数式编程的支持）。
 
+---
+
+
+Table of Contents
+=================
+
+   * [一.Java内存区域](#一.Java内存区域)
+      * [1.说一下 JVM 的主要组成部分及其作用？](#1.说一下 JVM 的主要组成部分及其作用？)
+      * [2.说一下 JVM 运行时数据区](#2.说一下 JVM 运行时数据区)
+      * [3.深拷贝和浅拷贝](#3.深拷贝和浅拷贝)
+      * [4.说一下堆栈的区别？](#4.说一下堆栈的区别？)
+      * [5.队列和栈是什么？有什么区别？](#5.队列和栈是什么？有什么区别？)
+   * [二.HotSpot虚拟机对象探秘](#二.HotSpot虚拟机对象探秘)
+      * [1.对象的创建](#二.HotSpot虚拟机对象探秘)
+      * [2.为对象分配内存](#二.HotSpot虚拟机对象探秘)
+      * [3.处理并发安全问题](#二.HotSpot虚拟机对象探秘)
+      * [4.对象的访问定位](#二.HotSpot虚拟机对象探秘)
+         * [①句柄访问](#二.HotSpot虚拟机对象探秘)
+         * [②直接指针](#二.HotSpot虚拟机对象探秘)
+
+***
+
+# 一.Java内存区域
+
+## 1.说一下 JVM 的主要组成部分及其作用？
+
+![图片](https://uploader.shimo.im/f/qoWURnNgaOgCmDDE.png!thumbnail)
+
+JVM包含两个子系统和两个组件，两个子系统为Class loader(类装载)、Execution engine(执行引擎)；两个组件为Runtime data area(运行时数据区)、Native Interface(本地接口)。
+
+* Class loader(类装载)：根据给定的全限定名类名(如：java.lang.Object)来装载class文件到Runtime data area中的method area。
+* Execution engine（执行引擎）：执行classes中的指令。
+* Native Interface(本地接口)：与native libraries交互，是其它编程语言交互的接口。
+* Runtime data area(运行时数据区域)：这就是我们常说的JVM的内存。
+
+**作用 **：首先通过编译器把 Java 代码转换成字节码，类加载器（ClassLoader）再把字节码加载到内存中，将其放在运行时数据区（Runtime data area）的方法区内，而字节码文件只是 JVM 的一套指令集规范，并不能直接交给底层操作系统去执行，因此需要特定的命令解析器执行引擎（Execution Engine），将字节码翻译成底层系统指令，再交由 CPU 去执行，而这个过程中需要调用其他语言的本地库接口（Native Interface）来实现整个程序的功能。
+
+**下面是Java程序运行机制详细说明**
+
+Java程序运行机制步骤
+
+* 首先利用IDE集成开发工具编写Java源代码，源文件的后缀为.java；
+* 再利用编译器(javac命令)将源代码编译成字节码文件，字节码文件的后缀名为.class；
+* 运行字节码的工作是由解释器(java命令)来完成的。
+
+![图片](https://uploader.shimo.im/f/99tR328un5oBpaBS.jpg!thumbnail)
+
+从上图可以看，java文件通过编译器变成了.class文件，接下来类加载器又将这些.class文件加载到JVM中。
+
+其实可以一句话来解释：类的加载指的是将类的.class文件中的二进制数据读入到内存中，将其放在运行时数据区的方法区内，然后在堆区创建一个 java.lang.Class对象，用来封装类在方法区内的数据结构。
+
+## 2.说一下 JVM 运行时数据区
+
+**Java 虚拟机在执行 Java 程序的过程中会把它所管理的内存区域划分为若干个不同的数据区域**。这些区域都有各自的用途，以及创建和销毁的时间，有些区域随着虚拟机进程的启动而存在，有些区域则是依赖线程的启动和结束而建立和销毁。Java 虚拟机所管理的内存被划分为如下几个区域：
+
+![图片](https://uploader.shimo.im/f/EXTTvHsnvTMbdzLm.png!thumbnail)
+
+不同虚拟机的运行时数据区可能略微有所不同，但都会遵从 Java 虚拟机规范， Java 虚拟机规范规定的区域分为以下 5 个部分：
+
+* 程序计数器（Program Counter Register）：当前线程所执行的字节码的行号指示器，字节码解析器的工作是通过改变这个计数器的值，来选取下一条需要执行的字节码指令，分支、循环、跳转、异常处理、线程恢复等基础功能，都需要依赖这个计数器来完成；
+* Java 虚拟机栈（Java Virtual Machine Stacks）：用于存储局部变量表、操作数栈、动态链接、方法出口等信息；
+* 本地方法栈（Native Method Stack）：与虚拟机栈的作用是一样的，只不过虚拟机栈是服务 Java 方法的，而本地方法栈是为虚拟机调用 Native 方法服务的；
+* Java 堆（Java Heap）：Java 虚拟机中内存最大的一块，是被所有线程共享的，几乎所有的对象实例都在这里分配内存；
+* 方法区（Methed Area）：用于存储已被虚拟机加载的类信息、常量、静态变量、即时编译后的代码等数据。
+## 3.深拷贝和浅拷贝
+
+浅拷贝（shallowCopy）只是增加了一个指针指向已存在的内存地址，
+
+深拷贝（deepCopy）是增加了一个指针并且申请了一个新的内存，使这个增加的指针指向这个新的内存，
+
+使用深拷贝的情况下，释放内存的时候不会因为出现浅拷贝时释放同一个内存的错误。
+
+浅复制：仅仅是指向被复制的内存地址，如果原地址发生改变，那么浅复制出来的对象也会相应的改变。
+
+深复制：在计算机中开辟一块新的内存地址用于存放复制的对象。
+
+## 4.说一下堆栈的区别？
+
+物理地址
+
+堆的物理地址分配对对象是不连续的。因此性能慢些。在GC的时候也要考虑到不连续的分配，所以有各种算法。比如，标记-消除，复制，标记-压缩，分代（即新生代使用复制算法，老年代使用标记——压缩）
+
+栈使用的是数据结构中的栈，先进后出的原则，物理地址分配是连续的。所以性能快。
+
+内存分别
+
+堆因为是不连续的，所以分配的内存是在运行期确认的，因此大小不固定。一般堆大小远远大于栈。
+
+栈是连续的，所以分配的内存大小要在编译期就确认，大小是固定的。
+
+存放的内容
+
+堆存放的是对象的实例和数组。因此该区更关注的是数据的存储
+
+栈存放：局部变量，操作数栈，返回结果。该区更关注的是程序方法的执行。
+
+PS：
+
+1. 静态变量放在方法区
+2. 静态的对象还是放在堆。
+
+程序的可见度
+
+堆对于整个应用程序都是共享、可见的。
+
+栈只对于线程是可见的。所以也是线程私有。他的生命周期和线程相同。
+
+## 5.队列和栈是什么？有什么区别？
+
+队列和栈都是被用来预存储数据的。
+
+* 操作的名称不同。队列的插入称为入队，队列的删除称为出队。栈的插入称为进栈，栈的删除称为出栈。
+* 可操作的方式不同。队列是在队尾入队，队头出队，即两边都可操作。而栈的进栈和出栈都是在栈顶进行的，无法对栈底直接进行操作。
+* 操作的方法不同。队列是先进先出（FIFO），即队列的修改是依先进先出的原则进行的。新来的成员总是加入队尾（不能从中间插入），每次离开的成员总是队列头上（不允许中途离队）。而栈为后进先出（LIFO）,即每次删除（出栈）的总是当前栈中最新的元素，即最后插入（进栈）的元素，而最先插入的被放在栈的底部，要到最后才能删除。
+# 二.HotSpot虚拟机对象探秘
+
+## 1.对象的创建
+
+说到对象的创建，首先让我们看看 Java 中提供的几种对象创建方式：
+
+| **Header**   | **解释**   | 
+|:----:|:----:|
+| 使用new关键字 | 调用了构造函数 | 
+| 使用Class的newInstance方法 | 调用了构造函数 | 
+| 使用Constructor类的newInstance方法 | 调用了构造函数 | 
+| 使用clone方法 | 没有调用构造函数 | 
+| 使用反序列化 | 没有调用构造函数 | 
+
+下面是对象创建的主要流程:
+
+![图片](https://uploader.shimo.im/f/hDsEnDSIA44NxYyC.png!thumbnail)
+
+虚拟机遇到一条new指令时，先检查常量池是否已经加载相应的类，如果没有，必须先执行相应的类加载。类加载通过后，接下来分配内存。若Java堆中内存是绝对规整的，使用“指针碰撞“方式分配内存；如果不是规整的，就从空闲列表中分配，叫做”空闲列表“方式。划分内存时还需要考虑一个问题-并发，也有两种方式: CAS同步处理，或者本地线程分配缓冲(Thread Local Allocation Buffer, TLAB)。然后内存空间初始化操作，接着是做一些必要的对象设置(元信息、哈希码…)，最后执行<init>方法。
+
+## 2.为对象分配内存
+
+类加载完成后，接着会在Java堆中划分一块内存分配给对象。内存分配根据Java堆是否规整，有两种方式：
+
+* 指针碰撞：如果Java堆的内存是规整，即所有用过的内存放在一边，而空闲的的放在另一边。分配内存时将位于中间的指针指示器向空闲的内存移动一段与对象大小相等的距离，这样便完成分配内存工作。
+* 空闲列表：如果Java堆的内存不是规整的，则需要由虚拟机维护一个列表来记录那些内存是可用的，这样在分配的时候可以从列表中查询到足够大的内存分配给对象，并在分配后更新列表记录。
+
+选择哪种分配方式是由 Java 堆是否规整来决定的，而 Java 堆是否规整又由所采用的垃圾收集器是否带有压缩整理功能决定。
+
+![图片](https://uploader.shimo.im/f/VPM34QnFjLUXW22G.png!thumbnail)
+
+## 3.处理并发安全问题
+
+对象的创建在虚拟机中是一个非常频繁的行为，哪怕只是修改一个指针所指向的位置，在并发情况下也是不安全的，可能出现正在给对象 A 分配内存，指针还没来得及修改，对象 B 又同时使用了原来的指针来分配内存的情况。解决这个问题有两种方案：
+
+* 对分配内存空间的动作进行同步处理（采用 CAS + 失败重试来保障更新操作的原子性）；
+* 把内存分配的动作按照线程划分在不同的空间之中进行，即每个线程在 Java 堆中预先分配一小块内存，称为本地线程分配缓冲（Thread Local Allocation Buffer, TLAB）。哪个线程要分配内存，就在哪个线程的 TLAB 上分配。只有 TLAB 用完并分配新的 TLAB 时，才需要同步锁。通过-XX:+/-UserTLAB参数来设定虚拟机是否使用TLAB。
+
+![图片](https://uploader.shimo.im/f/nar3KrRxHKwcDQjw.png!thumbnail)
+
+## 4.对象的访问定位
+
+Java程序需要通过 JVM 栈上的引用访问堆中的具体对象。对象的访问方式取决于 JVM 虚拟机的实现。目前主流的访问方式有 句柄 和 直接指针 两种方式。
+
+>**指针**： 指向对象，代表一个对象在内存中的起始地址。
+>**句柄**： 可以理解为指向指针的指针，维护着对象的指针。句柄不直接指向对象，而是指向对象的指针（句柄不发生变化，指向固定内存地址），再由对象的指针指向对象的真实内存地址。
+### ①句柄访问
+
+Java堆中划分出一块内存来作为句柄池，引用中存储对象的句柄地址，而句柄中包含了对象实例数据与对象类型数据各自的具体地址信息，具体构造如下图所示：
+
+![图片](https://uploader.shimo.im/f/qtAXmJpOdwkTcb88.png!thumbnail)
+
+优势：引用中存储的是稳定的句柄地址，在对象被移动（垃圾收集时移动对象是非常普遍的行为）时只会改变句柄中的实例数据指针，而引用本身不需要修改。
+
+### ②直接指针
+
+如果使用直接指针访问，引用 中存储的直接就是对象地址，那么Java堆对象内部的布局中就必须考虑如何放置访问类型数据的相关信息。
+
+![图片](https://uploader.shimo.im/f/bNjUwGk7nwsuLTmG.png!thumbnail)
+
+优势：速度更快，节省了一次指针定位的时间开销。由于对象的访问在Java中非常频繁，因此这类开销积少成多后也是非常可观的执行成本。HotSpot 中采用的就是这种方式。
+
+# 三.内存溢出异常
+
+## 1.Java会存在内存泄漏吗？请简单描述
+
+内存泄漏是指不再被使用的对象或者变量一直被占据在内存中。理论上来说，Java是有GC垃圾回收机制的，也就是说，不再被使用的对象，会被GC自动回收掉，自动从内存中清除。
+
+但是，即使这样，Java也还是存在着内存泄漏的情况，java导致内存泄露的原因很明确：长生命周期的对象持有短生命周期对象的引用就很可能发生内存泄露，尽管短生命周期对象已经不再需要，但是因为长生命周期对象持有它的引用而导致不能被回收，这就是java中内存泄露的发生场景。
+
+# 四.垃圾收集器
+
+## 1.简述Java垃圾回收机制
+
+在java中，程序员是不需要显示的去释放一个对象的内存的，而是由虚拟机自行执行。在JVM中，有一个垃圾回收线程，它是低优先级的，在正常情况下是不会执行的，只有在虚拟机空闲或者当前堆内存不足时，才会触发执行，扫面那些没有被任何引用的对象，并将它们添加到要回收的集合中，进行回收。
+
+## 2.GC是什么？为什么要GC
+
+GC 是垃圾收集的意思（Gabage Collection）,内存处理是编程人员容易出现问题的地方，忘记或者错误的内存
+
+回收会导致程序或系统的不稳定甚至崩溃，Java 提供的 GC 功能可以自动监测对象是否超过作用域从而达到自动
+
+回收内存的目的，Java 语言没有提供释放已分配内存的显示操作方法。
+
+## 3.垃圾回收的优点和原理,并考虑2种回收机制
+
+java语言最显著的特点就是引入了垃圾回收机制，它使java程序员在编写程序时不再考虑内存管理的问题。
+
+由于有这个垃圾回收机制，java中的对象不再有“作用域”的概念，只有引用的对象才有“作用域”。
+
+垃圾回收机制有效的防止了内存泄露，可以有效的使用可使用的内存。
+
+垃圾回收器通常作为一个单独的低级别的线程运行，在不可预知的情况下对内存堆中已经死亡的或很长时间没有用过的对象进行清除和回收。
+
+程序员不能实时的对某个对象或所有对象调用垃圾回收器进行垃圾回收。
+
+垃圾回收有分代复制垃圾回收、标记垃圾回收、增量垃圾回收。
+
+## 4.垃圾回收器的基本原理是什么?垃圾回收器可以马上回收内存吗?有什么办法主动通知虚拟机进行垃圾回收?
+
+对于GC来说，当程序员创建对象时，GC就开始监控这个对象的地址、大小以及使用情况。
+
+通常，GC采用有向图的方式记录和管理堆(heap)中的所有对象。通过这种方式确定哪些对象是"可达的"，哪些对象是"不可达的"。当GC确定一些对象为"不可达"时，GC就有责任回收这些内存空间。
+
+可以。程序员可以手动执行System.gc()，通知GC运行，但是Java语言规范并不保证GC一定会执行。
+
+## 5.Java 中都有哪些引用类型?
+
+* 强引用：发生 gc 的时候不会被回收。
+* 软引用：有用但不是必须的对象，在发生内存溢出之前会被回收。
+* 弱引用：有用但不是必须的对象，在下一次GC时会被回收。
+* 虚引用（幽灵引用/幻影引用）：无法通过虚引用获得对象，用 PhantomReference 实现虚引用，虚引用的用途是在 gc 时返回一个通知。
+## 6.怎么判断对象是否可以被回收?
+
+垃圾收集器在做垃圾回收的时候，首先需要判定的就是哪些内存是需要被回收的，哪些对象是「存活」的，是不可以被回收的；哪些对象已经「死掉」了，需要被回收。
+
+一般有两种方法来判断：
+
+* 引用计数器法：为每个对象创建一个引用计数，有对象引用时计数器 +1，引用被释放时计数 -1，当计数器为 0 时就可以被回收。它有一个缺点不能解决循环引用的问题；
+* 可达性分析算法：从 GC Roots 开始向下搜索，搜索所走过的路径称为引用链。当一个对象到 GC Roots 没有任何引用链相连时，则证明此对象是可以被回收的。
+## 7.在Java中,对象什么时候可以被垃圾回收
+
+当对象对当前使用这个对象的应用程序变得不可触及的时候，这个对象就可以被回收了。
+
+垃圾回收不会发生在永久代，如果永久代满了或者是超过了临界值，会触发完全垃圾回收(Full GC)。如果你仔细查看垃圾收集器的输出信息，就会发现永久代也是被回收的。这就是为什么正确的永久代大小对避免Full GC是非常重要的原因。
+
+## 8.JVM中的永久代中会发生垃圾回收吗
+
+垃圾回收不会发生在永久代，如果永久代满了或者是超过了临界值，会触发完全垃圾回收(Full GC)。如果你仔细查看垃圾收集器的输出信息，就会发现永久代也是被回收的。这就是为什么正确的永久代大小对避免Full GC是非常重要的原因。请参考下Java8：从永久代到元数据区
+
+(译者注：Java8中已经移除了永久代，新加了一个叫做元数据区的native内存区)
+
+## 9.说一下 JVM 有哪些垃圾回收算法?
+
+* 标记-清除算法：标记无用对象，然后进行清除回收。缺点：效率不高，无法清除垃圾碎片。
+* 复制算法：按照容量划分二个大小相等的内存区域，当一块用完的时候将活着的对象复制到另一块上，然后再把已使用的内存空间一次清理掉。缺点：内存使用率不高，只有原来的一半。
+* 标记-整理算法：标记无用对象，让所有存活的对象都向一端移动，然后直接清除掉端边界以外的内存。
+* 分代算法：根据对象存活周期的不同将内存划分为几块，一般是新生代和老年代，新生代基本采用复制算法，老年代采用标记整理算法。
+### ①标记-清除算法
+
+标记无用对象，然后进行清除回收。
+
+标记-清除算法（Mark-Sweep）是一种常见的基础垃圾收集算法，它将垃圾收集分为两个阶段：
+
+* 标记阶段：标记出可以回收的对象。
+* 清除阶段：回收被标记的对象所占用的空间。
+
+标记-清除算法之所以是基础的，是因为后面讲到的垃圾收集算法都是在此算法的基础上进行改进的。
+
+* 优点：实现简单，不需要对象进行移动。
+* 缺点：标记、清除过程效率低，产生大量不连续的内存碎片，提高了垃圾回收的频率。
+
+标记-清除算法的执行的过程如下图所示
+
+![图片](https://uploader.shimo.im/f/k8KMLfXd55A1XnOO.png!thumbnail)
+
+### ②复制算法
+
+为了解决标记-清除算法的效率不高的问题，产生了复制算法。它把内存空间划为两个相等的区域，每次只使用其中一个区域。垃圾收集时，遍历当前使用的区域，把存活对象复制到另外一个区域中，最后将当前使用的区域的可回收的对象进行回收。
+
+* 优点：按顺序分配内存即可，实现简单、运行高效，不用考虑内存碎片。
+* 缺点：可用的内存大小缩小为原来的一半，对象存活率高时会频繁进行复制。
+
+复制算法的执行过程如下图所示
+
+![图片](https://uploader.shimo.im/f/azL8MQRF504mHjHZ.png!thumbnail)
+
+### ③标记-整理算法
+
+在新生代中可以使用复制算法，但是在老年代就不能选择复制算法了，因为老年代的对象存活率会较高，这样会有较多的复制操作，导致效率变低。标记-清除算法可以应用在老年代中，但是它效率不高，在内存回收后容易产生大量内存碎片。因此就出现了一种标记-整理算法（Mark-Compact）算法，与标记-整理算法不同的是，在标记可回收的对象后将所有存活的对象压缩到内存的一端，使他们紧凑的排列在一起，然后对端边界以外的内存进行回收。回收后，已用和未用的内存都各自一边。
+
+* 优点：解决了标记-清理算法存在的内存碎片问题。
+* 缺点：仍需要进行局部对象移动，一定程度上降低了效率。
+
+标记-整理算法的执行过程如下图所示
+
+![图片](https://uploader.shimo.im/f/X3YuxxrmltkBrMz5.png!thumbnail)
+
+### ④分代收集算法
+
+当前商业虚拟机都采用分代收集的垃圾收集算法。分代收集算法，顾名思义是根据对象的存活周期将内存划分为几块。一般包括年轻代、老年代 和 永久代，如图所示：
+
+![图片](https://uploader.shimo.im/f/ZSkuCtQdICAqBKW7.png!thumbnail)
+
+## 10.说一下 JVM 有哪些垃圾回收器？
+
+如果说垃圾收集算法是内存回收的方法论，那么垃圾收集器就是内存回收的具体实现。下图展示了7种作用于不同分代的收集器，其中用于回收新生代的收集器包括Serial、PraNew、Parallel Scavenge，回收老年代的收集器包括Serial Old、Parallel Old、CMS，还有用于回收整个Java堆的G1收集器。不同收集器之间的连线表示它们可以搭配使用。
+
+![图片](https://uploader.shimo.im/f/C7zMeYtX0zICqnQ2.png!thumbnail)
+
+* Serial收集器（复制算法): 新生代单线程收集器，标记和清理都是单线程，优点是简单高效；
+* ParNew收集器 (复制算法): 新生代收并行集器，实际上是Serial收集器的多线程版本，在多核CPU环境下有着比Serial更好的表现；
+* Parallel Scavenge收集器 (复制算法): 新生代并行收集器，追求高吞吐量，高效利用 CPU。吞吐量 = 用户线程时间/(用户线程时间+GC线程时间)，高吞吐量可以高效率的利用CPU时间，尽快完成程序的运算任务，适合后台应用等对交互相应要求不高的场景；
+* Serial Old收集器 (标记-整理算法): 老年代单线程收集器，Serial收集器的老年代版本；
+* Parallel Old收集器 (标记-整理算法)： 老年代并行收集器，吞吐量优先，Parallel Scavenge收集器的老年代版本；
+* CMS(Concurrent Mark Sweep)收集器（标记-清除算法）： 老年代并行收集器，以获取最短回收停顿时间为目标的收集器，具有高并发、低停顿的特点，追求最短GC回收停顿时间。
+* G1(Garbage First)收集器 (标记-整理算法)： Java堆并行收集器，G1收集器是JDK1.7提供的一个新收集器，G1收集器基于“标记-整理”算法实现，也就是说不会产生内存碎片。此外，G1收集器不同于之前的收集器的一个重要特点是：G1回收的范围是整个Java堆(包括新生代，老年代)，而前六种收集器回收的范围仅限于新生代或老年代。
+## 11.详细介绍一下 CMS 垃圾回收器?
+
+CMS 是英文 Concurrent Mark-Sweep 的简称，是以牺牲吞吐量为代价来获得最短回收停顿时间的垃圾回收器。对于要求服务器响应速度的应用上，这种垃圾回收器非常适合。在启动 JVM 的参数加上“-XX:+UseConcMarkSweepGC”来指定使用 CMS 垃圾回收器。
+
+CMS 使用的是标记-清除的算法实现的，所以在 gc 的时候回产生大量的内存碎片，当剩余内存不能满足程序运行要求时，系统将会出现 Concurrent Mode Failure，临时 CMS 会采用 Serial Old 回收器进行垃圾清除，此时的性能将会被降低。
+
+## 12.新生代垃圾回收器和老年代垃圾回收器都有哪些?有什么区别?
+
+* 新生代回收器：Serial、ParNew、Parallel Scavenge
+* 老年代回收器：Serial Old、Parallel Old、CMS
+* 整堆回收器：G1
+
+新生代垃圾回收器一般采用的是复制算法，复制算法的优点是效率高，缺点是内存利用率低；老年代回收器一般采用的是标记-整理的算法进行垃圾回收。
+
+## 13.简述分代垃圾回收器是怎么工作的?
+
+分代回收器有两个分区：老生代和新生代，新生代默认的空间占比总空间的 1/3，老生代的默认占比是 2/3。
+
+新生代使用的是复制算法，新生代里有 3 个分区：Eden、To Survivor、From Survivor，它们的默认占比是 8:1:1，它的执行流程如下：
+
+* 把 Eden + From Survivor 存活的对象放入 To Survivor 区；
+* 清空 Eden 和 From Survivor 分区；
+* From Survivor 和 To Survivor 分区交换，From Survivor 变 To Survivor，To Survivor 变 From Survivor。
+
+每次在 From Survivor 到 To Survivor 移动时都存活的对象，年龄就 +1，当年龄到达 15（默认配置是 15）时，升级为老生代。大对象也会直接进入老生代。
+
+老生代当空间占用到达某个值之后就会触发全局垃圾收回，一般使用标记整理的执行算法。以上这些循环往复就构成了整个分代垃圾回收的整体执行流程。
+
+# 五.内存分配策略
+
+## 1.简述java内存分配与回收策率以及Minor GC和Major GC
+
+所谓自动内存管理，最终要解决的也就是内存分配和内存回收两个问题。前面我们介绍了内存回收，这里我们再来聊聊内存分配。
+
+对象的内存分配通常是在 Java 堆上分配（随着虚拟机优化技术的诞生，某些场景下也会在栈上分配，后面会详细介绍），对象主要分配在新生代的 Eden 区，如果启动了本地线程缓冲，将按照线程优先在 TLAB 上分配。少数情况下也会直接在老年代上分配。总的来说分配规则不是百分百固定的，其细节取决于哪一种垃圾收集器组合以及虚拟机相关参数有关，但是虚拟机对于内存的分配还是会遵循以下几种「普世」规则：
+
+### ①对象优先在 Eden 区分配
+
+多数情况，对象都在新生代 Eden 区分配。当 Eden 区分配没有足够的空间进行分配时，虚拟机将会发起一次 Minor GC。如果本次 GC 后还是没有足够的空间，则将启用分配担保机制在老年代中分配内存。
+
+这里我们提到 Minor GC，如果你仔细观察过 GC 日常，通常我们还能从日志中发现 Major GC/Full GC。
+
+* Minor GC 是指发生在新生代的 GC，因为 Java 对象大多都是朝生夕死，所有 Minor GC 非常频繁，一般回收速度也非常快；
+* Major GC/Full GC 是指发生在老年代的 GC，出现了 Major GC 通常会伴随至少一次 Minor GC。Major GC 的速度通常会比 Minor GC 慢 10 倍以上。
+### ②大对象直接进入老年代
+
+所谓大对象是指需要大量连续内存空间的对象，频繁出现大对象是致命的，会导致在内存还有不少空间的情况下提前触发 GC 以获取足够的连续空间来安置新对象。
+
+前面我们介绍过新生代使用的是标记-清除算法来处理垃圾回收的，如果大对象直接在新生代分配就会导致 Eden 区和两个 Survivor 区之间发生大量的内存复制。因此对于大对象都会直接在老年代进行分配。
+
+### ③长期存活对象将进入老年代
+
+虚拟机采用分代收集的思想来管理内存，那么内存回收时就必须判断哪些对象应该放在新生代，哪些对象应该放在老年代。因此虚拟机给每个对象定义了一个对象年龄的计数器，如果对象在 Eden 区出生，并且能够被 Survivor 容纳，将被移动到 Survivor 空间中，这时设置对象年龄为 1。对象在 Survivor 区中每「熬过」一次 Minor GC 年龄就加 1，当年龄达到一定程度（默认 15） 就会被晋升到老年代。
+
+# 六.虚拟机类加载机制
+
+## 1.简述java类加载机制?
+
+虚拟机把描述类的数据从Class文件加载到内存，并对数据进行校验，解析和初始化，最终形成可以被虚拟机直接使用的java类型。
+
+## 2.描述一下JVM加载Class文件的原理机制
+
+Java中的所有类，都需要由类加载器装载到JVM中才能运行。类加载器本身也是一个类，而它的工作就是把class文件从硬盘读取到内存中。在写程序的时候，我们几乎不需要关心类的加载，因为这些都是隐式装载的，除非我们有特殊的用法，像是反射，就需要显式的加载所需要的类。
+
+类装载方式，有两种 ：
+
+1. 隐式装载， 程序在运行过程中当碰到通过new 等方式生成对象时，隐式调用类装载器加载对应的类到jvm中，
+2. 显式装载， 通过class.forname()等方法，显式加载需要的类
+
+Java类的加载是动态的，它并不会一次性将所有类全部加载后再运行，而是保证程序运行的基础类(像是基类)完全加载到jvm中，至于其他类，则在需要的时候才加载。这当然就是为了节省内存开销。
+
+## 3.什么是类加载器,类加载器有哪些?
+
+实现通过类的权限定名获取该类的二进制字节流的代码块叫做类加载器。
+
+主要有一下四种类加载器:
+
+1. 启动类加载器(Bootstrap ClassLoader)用来加载java核心类库，无法被java程序直接引用。
+2. 扩展类加载器(extensions class loader):它用来加载 Java 的扩展库。Java 虚拟机的实现会提供一个扩展库目录。该类加载器在此目录里面查找并加载 Java 类。
+3. 系统类加载器（system class loader）：它根据 Java 应用的类路径（CLASSPATH）来加载 Java 类。一般来说，Java 应用的类都是由它来完成加载的。可以通过 ClassLoader.getSystemClassLoader()来获取它。
+4. 用户自定义类加载器，通过继承 java.lang.ClassLoader类的方式实现。
+## 4.说一下类装载的执行过程?
+
+类装载分为以下 5 个步骤：
+
+* 加载：根据查找路径找到相应的 class 文件然后导入；
+* 验证：检查加载的 class 文件的正确性；
+* 准备：给类中的静态变量分配内存空间；
+* 解析：虚拟机将常量池中的符号引用替换成直接引用的过程。符号引用就理解为一个标示，而在直接引用直接指向内存中的地址；
+* 初始化：对静态变量和静态代码块执行初始化工作。
+## 5.什么是双亲委派模型?
+
+在介绍双亲委派模型之前先说下类加载器。对于任意一个类，都需要由加载它的类加载器和这个类本身一同确立在 JVM 中的唯一性，每一个类加载器，都有一个独立的类名称空间。类加载器就是根据指定全限定名称将 class 文件加载到 JVM 内存，然后再转化为 class 对象。
+
+![图片](https://uploader.shimo.im/f/OQLer0AOZAcXsINE.png!thumbnail)
+
+类加载器分类：
+
+* 启动类加载器（Bootstrap ClassLoader），是虚拟机自身的一部分，用来加载Java_HOME/lib/目录中的，或者被 -Xbootclasspath 参数所指定的路径中并且被虚拟机识别的类库；
+* 其他类加载器：
+* 扩展类加载器（Extension ClassLoader）：负责加载\lib\ext目录或Java. ext. dirs系统变量指定的路径中的所有类库；
+* 应用程序类加载器（Application ClassLoader）。负责加载用户类路径（classpath）上的指定类库，我们可以直接使用这个类加载器。一般情况，如果我们没有自定义类加载器默认就是用这个加载器。
+
+双亲委派模型：如果一个类加载器收到了类加载的请求，它首先不会自己去加载这个类，而是把这个请求委派给父类加载器去完成，每一层的类加载器都是如此，这样所有的加载请求都会被传送到顶层的启动类加载器中，只有当父加载无法完成加载请求（它的搜索范围中没找到所需的类）时，子加载器才会尝试去加载类。
+
+当一个类收到了类加载请求时，不会自己先去加载这个类，而是将其委派给父类，由父类去加载，如果此时父类不能加载，反馈给子类，由子类去完成类的加载。
+
+# 七.JVM调优
+
+## 1.说一下 JVM 调优的工具？
+
+JDK 自带了很多监控工具，都位于 JDK 的 bin 目录下，其中最常用的是 jconsole 和 jvisualvm 这两款视图监控工具。
+
+* jconsole：用于对 JVM 中的内存、线程和类等进行监控；
+* jvisualvm：JDK 自带的全能分析工具，可以分析：内存快照、线程快照、程序死锁、监控内存的变化、gc 变化等。
+## 2.常用的 JVM 调优的参数都有哪些?
+
+* -Xms2g：初始化推大小为 2g；
+* -Xmx2g：堆最大内存为 2g；
+* -XX:NewRatio=4：设置年轻的和老年代的内存比例为 1:4；
+* -XX:SurvivorRatio=8：设置新生代 Eden 和 Survivor 比例为 8:2；
+* –XX:+UseParNewGC：指定使用 ParNew + Serial Old 垃圾回收器组合；
+* -XX:+UseParallelOldGC：指定使用 ParNew + ParNew Old 垃圾回收器组合；
+* -XX:+UseConcMarkSweepGC：指定使用 CMS + Serial Old 垃圾回收器组合；
+* -XX:+PrintGC：开启打印 gc 信息；
+* -XX:+PrintGCDetails：打印 gc 详细信息。
+
+---
+
+# 一、Java异常架构与异常关键字
+
+## 1.Java异常简介
+
+Java异常是Java提供的一种识别及响应错误的一致性机制。
+
+Java异常机制可以使程序中异常处理代码和正常业务代码分离，保证程序代码更加优雅，并提高程序健壮性。在有效使用异常的情况下，异常能清晰的回答what, where, why这3个问题：异常类型回答了“什么”被抛出，异常堆栈跟踪回答了“在哪”抛出，异常信息回答了“为什么”会抛出。
+
+## 2.Java异常架构
+
+![图片](https://uploader.shimo.im/f/XKGAVvRIscQNtFIm.png!thumbnail)
+
+### ①. Throwable
+
+Throwable 是 Java 语言中所有错误与异常的超类。
+
+Throwable 包含两个子类：Error（错误）和 Exception（异常），它们通常用于指示发生了异常情况。
+
+Throwable 包含了其线程创建时线程执行堆栈的快照，它提供了 printStackTrace() 等接口用于获取堆栈跟踪数据等信息。
+
+### ②. Error（错误）
+
+**定义**：Error 类及其子类。程序中无法处理的错误，表示运行应用程序中出现了严重的错误。
+
+**特点**：此类错误一般表示代码运行时 JVM 出现问题。通常有 Virtual MachineError（虚拟机运行错误）、NoClassDefFoundError（类定义错误）等。比如 OutOfMemoryError：内存不足错误；StackOverflowError：栈溢出错误。此类错误发生时，JVM 将终止线程。
+
+这些错误是不受检异常，非代码性错误。因此，当此类错误发生时，应用程序不应该去处理此类错误。按照Java惯例，我们是不应该实现任何新的Error子类的！
+
+### ③. Exception（异常）
+
+程序本身可以捕获并且可以处理的异常。Exception 这种异常又分为两类：运行时异常和编译时异常。
+
+**运行时异常**
+
+定义：RuntimeException 类及其子类，表示 JVM 在运行期间可能出现的异常。
+
+特点：Java 编译器不会检查它。也就是说，当程序中可能出现这类异常时，倘若既"没有通过throws声明抛出它"，也"没有用try-catch语句捕获它"，还是会编译通过。比如NullPointerException空指针异常、ArrayIndexOutBoundException数组下标越界异常、ClassCastException类型转换异常、ArithmeticExecption算术异常。此类异常属于不受检异常，一般是由程序逻辑错误引起的，在程序中可以选择捕获处理，也可以不处理。虽然 Java 编译器不会检查运行时异常，但是我们也可以通过 throws 进行声明抛出，也可以通过 try-catch 对它进行捕获处理。如果产生运行时异常，则需要通过修改代码来进行避免。例如，若会发生除数为零的情况，则需要通过代码避免该情况的发生！
+
+RuntimeException 异常会由 Java 虚拟机自动抛出并自动捕获（就算我们没写异常捕获语句运行时也会抛出错误！！），此类异常的出现绝大数情况是代码本身有问题应该从逻辑上去解决并改进代码。
+
+**编译时异常**
+
+定义: Exception 中除 RuntimeException 及其子类之外的异常。
+
+特点: Java 编译器会检查它。如果程序中出现此类异常，比如 ClassNotFoundException（没有找到指定的类异常），IOException（IO流异常），要么通过throws进行声明抛出，要么通过try-catch进行捕获处理，否则不能通过编译。在程序中，通常不会自定义该类异常，而是直接使用系统提供的异常类。该异常我们必须手动在代码里添加捕获语句来处理该异常。
+
+### ④. 受检异常与非受检异常
+
+Java 的所有异常可以分为受检异常（checked exception）和非受检异常（unchecked exception）。
+
+**受检异常**
+
+编译器要求必须处理的异常。正确的程序在运行过程中，经常容易出现的、符合预期的异常情况。一旦发生此类异常，就必须采用某种方式进行处理。除 RuntimeException 及其子类外，其他的 Exception 异常都属于受检异常。编译器会检查此类异常，也就是说当编译器检查到应用中的某处可能会此类异常时，将会提示你处理本异常——要么使用try-catch捕获，要么使用方法签名中用 throws 关键字抛出，否则编译不通过。
+
+**非受检异常**
+
+编译器不会进行检查并且不要求必须处理的异常，也就说当程序中出现此类异常时，即使我们没有try-catch捕获它，也没有使用throws抛出该异常，编译也会正常通过。该类异常包括运行时异常（RuntimeException极其子类）和错误（Error）。
+
+## 3.Java异常关键字
+
+* try – 用于监听。将要被监听的代码(可能抛出异常的代码)放在try语句块之内，当try语句块内发生异常时，异常就被抛出。
+* catch – 用于捕获异常。catch用来捕获try语句块中发生的异常。
+* finally – finally语句块总是会被执行。它主要用于回收在try块里打开的物力资源(如数据库连接、网络连接和磁盘文件)。只有finally块，执行完成之后，才会回来执行try或者catch块中的return或者throw语句，如果finally中使用了return或者throw等终止方法的语句，则就不会跳回执行，直接停止。
+* throw – 用于抛出异常。
+* throws – 用在方法签名中，用于声明该方法可能抛出的异常。
+# 二、Java异常处理
+
+![图片](https://uploader.shimo.im/f/FzYC9SOFufwOhckX.png!thumbnail)
+
+Java 通过面向对象的方法进行异常处理，一旦方法抛出异常，系统自动根据该异常对象寻找合适异常处理器（Exception Handler）来处理该异常，把各种不同的异常进行分类，并提供了良好的接口。在 Java 中，每个异常都是一个对象，它是 Throwable 类或其子类的实例。当一个方法出现异常后便抛出一个异常对象，该对象中包含有异常信息，调用这个对象的方法可以捕获到这个异常并可以对其进行处理。Java 的异常处理是通过 5 个关键词来实现的：try、catch、throw、throws 和 finally。
+
+在Java应用中，异常的处理机制分为声明异常，抛出异常和捕获异常。
+
+## 1.声明异常
+
+通常，应该捕获那些知道如何处理的异常，将不知道如何处理的异常继续传递下去。传递异常可以在方法签名处使用 throws 关键字声明可能会抛出的异常。
+
+注意
+
+* 非检查异常（Error、RuntimeException 或它们的子类）不可使用 throws 关键字来声明要抛出的异常。
+* 一个方法出现编译时异常，就需要 try-catch/ throws 处理，否则会导致编译错误。
+## 2.抛出异常
+
+如果你觉得解决不了某些异常问题，且不需要调用者处理，那么你可以抛出异常。
+
+throw关键字作用是在方法内部抛出一个Throwable类型的异常。任何Java代码都可以通过throw语句抛出异常。
+
+## 3.捕获异常
+
+程序通常在运行之前不报错，但是运行后可能会出现某些未知的错误，但是还不想直接抛出到上一级，那么就需要通过try…catch…的形式进行异常捕获，之后根据不同的异常情况来进行相应的处理。
+
+## 4.如何选择异常类型
+
+可以根据下图来选择是捕获异常，声明异常还是抛出异常
+
+![图片](https://uploader.shimo.im/f/WMuZ10VKr6oEqSXg.png!thumbnail)
+
+## 5.常见异常处理方式
+
+### ①. 直接抛出异常
+
+通常，应该捕获那些知道如何处理的异常，将不知道如何处理的异常继续传递下去。传递异常可以在方法签名处使用 throws 关键字声明可能会抛出的异常。
+
+```
+private static void readFile(String filePath) throws IOException {
+    File file = new File(filePath);
+    String result;
+    BufferedReader reader = new BufferedReader(new FileReader(file));
+    while((result = reader.readLine())!=null) {
+        System.out.println(result);
+    }
+    reader.close();
+}
+```
+### ②. 封装异常再抛出
+
+有时我们会从 catch 中抛出一个异常，目的是为了改变异常的类型。多用于在多系统集成时，当某个子系统故障，异常类型可能有多种，可以用统一的异常类型向外暴露，不需暴露太多内部异常细节。
+
+```
+private static void readFile(String filePath) throws MyException {    
+    try {
+        // code
+    } catch (IOException e) {
+        MyException ex = new MyException("read file failed.");
+        ex.initCause(e);
+        throw ex;
+    }
+}
+```
+### ③. 捕获异常
+
+在一个 try-catch 语句块中可以捕获多个异常类型，并对不同类型的异常做出不同的处理
+
+```
+private static void readFile(String filePath) {
+    try {
+        // code
+    } catch (FileNotFoundException e) {
+        // handle FileNotFoundException
+    } catch (IOException e){
+        // handle IOException
+    }
+}
+```
+同一个 catch 也可以捕获多种类型异常，用 | 隔开
+```
+private static void readFile(String filePath) {
+    try {
+        // code
+    } catch (FileNotFoundException | UnknownHostException e) {
+        // handle FileNotFoundException or UnknownHostException
+    } catch (IOException e){
+        // handle IOException
+    }
+}
+```
+### ④. 自定义异常
+
+习惯上，定义一个异常类应包含两个构造函数，一个无参构造函数和一个带有详细描述信息的构造函数（Throwable 的 toString 方法会打印这些详细信息，调试时很有用）
+
+```
+public class MyException extends Exception {
+    public MyException(){ }
+    public MyException(String msg){
+        super(msg);
+    }
+    // ...
+}
+```
+### ⑤. try-catch-finally
+
+当方法中发生异常，异常处之后的代码不会再执行，如果之前获取了一些本地资源需要释放，则需要在方法正常结束时和 catch 语句中都调用释放本地资源的代码，显得代码比较繁琐，finally 语句可以解决这个问题。
+
+```
+private static void readFile(String filePath) throws MyException {
+    File file = new File(filePath);
+    String result;
+    BufferedReader reader = null;
+    try {
+        reader = new BufferedReader(new FileReader(file));
+        while((result = reader.readLine())!=null) {
+            System.out.println(result);
+        }
+    } catch (IOException e) {
+        System.out.println("readFile method catch block.");
+        MyException ex = new MyException("read file failed.");
+        ex.initCause(e);
+        throw ex;
+    } finally {
+        System.out.println("readFile method finally block.");
+        if (null != reader) {
+            try {
+                reader.close();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+调用该方法时，读取文件时若发生异常，代码会进入 catch 代码块，之后进入 finally 代码块；若读取文件时未发生异常，则会跳过 catch 代码块直接进入 finally 代码块。所以无论代码中是否发生异常，fianlly 中的代码都会执行。
+若 catch 代码块中包含 return 语句，finally 中的代码还会执行吗？将以上代码中的 catch 子句修改如下：
+
+```
+catch (IOException e) {
+    System.out.println("readFile method catch block.");
+    return;
+}
+```
+调用 readFile 方法，观察当 catch 子句中调用 return 语句时，finally 子句是否执行
+```
+readFile method catch block.
+readFile method finally block.
+```
+可见，即使 catch 中包含了 return 语句，finally 子句依然会执行。若 finally 中也包含 return 语句，finally 中的 return 会覆盖前面的 return.
+### ⑥. try-with-resource
+
+上面例子中，finally 中的 close 方法也可能抛出 IOException, 从而覆盖了原始异常。JAVA 7 提供了更优雅的方式来实现资源的自动释放，自动释放的资源需要是实现了 AutoCloseable 接口的类。
+
+```
+private  static void tryWithResourceTest(){
+    try (Scanner scanner = new Scanner(new FileInputStream("c:/abc"),"UTF-8")){
+        // code
+    } catch (IOException e){
+        // handle exception
+    }
+}
+```
+try 代码块退出时，会自动调用 scanner.close 方法，和把 scanner.close 方法放在 finally 代码块中不同的是，若 scanner.close 抛出异常，则会被抑制，抛出的仍然为原始异常。被抑制的异常会由 addSusppressed 方法添加到原来的异常，如果想要获取被抑制的异常列表，可以调用 getSuppressed 方法来获取。
+# 三、Java异常常见面试题
+
+## 1. Error 和 Exception 区别是什么？
+
+Error 类型的错误通常为虚拟机相关错误，如系统崩溃，内存不足，堆栈溢出等，编译器不会对这类错误进行检测，JAVA 应用程序也不应对这类错误进行捕获，一旦这类错误发生，通常应用程序会被终止，仅靠应用程序本身无法恢复；
+
+Exception 类的错误是可以在应用程序中进行捕获并处理的，通常遇到这种错误，应对其进行处理，使应用程序可以继续正常运行。
+
+## 2. 运行时异常和一般异常(受检异常)区别是什么？
+
+运行时异常包括 RuntimeException 类及其子类，表示 JVM 在运行期间可能出现的异常。 Java 编译器不会检查运行时异常。
+
+受检异常是Exception 中除 RuntimeException 及其子类之外的异常。 Java 编译器会检查受检异常。
+
+RuntimeException异常和受检异常之间的区别：是否强制要求调用者必须处理此异常，如果强制要求调用者必须进行处理，那么就使用受检异常，否则就选择非受检异常(RuntimeException)。一般来讲，如果没有特殊的要求，我们建议使用RuntimeException异常。
+
+## 3. JVM 是如何处理异常的？
+
+在一个方法中如果发生异常，这个方法会创建一个异常对象，并转交给 JVM，该异常对象包含异常名称，异常描述以及异常发生时应用程序的状态。创建异常对象并转交给 JVM 的过程称为抛出异常。可能有一系列的方法调用，最终才进入抛出异常的方法，这一系列方法调用的有序列表叫做调用栈。
+
+JVM 会顺着调用栈去查找看是否有可以处理异常的代码，如果有，则调用异常处理代码。当 JVM 发现可以处理异常的代码时，会把发生的异常传递给它。如果 JVM 没有找到可以处理该异常的代码块，JVM 就会将该异常转交给默认的异常处理器（默认处理器为 JVM 的一部分），默认异常处理器打印出异常信息并终止应用程序。
+
+## 4. throw 和 throws 的区别是什么？
+
+Java 中的异常处理除了包括捕获异常和处理异常之外，还包括声明异常和拋出异常，可以通过 throws 关键字在方法上声明该方法要拋出的异常，或者在方法内部通过 throw 拋出异常对象。
+
+**throws 关键字和 throw 关键字在使用上的几点区别如下：**
+
+* throw 关键字用在方法内部，只能用于抛出一种异常，用来抛出方法或代码块中的异常，受查异常和非受查异常都可以被抛出。
+* throws 关键字用在方法声明上，可以抛出多个异常，用来标识该方法可能抛出的异常列表。一个方法用 throws 标识了可能抛出的异常列表，调用该方法的方法中必须包含可处理异常的代码，否则也要在方法签名中用 throws 关键字声明相应的异常。
+## 5. final、finally、finalize 有什么区别？
+
+* final可以修饰类、变量、方法，修饰类表示该类不能被继承、修饰方法表示该方法不能被重写、修饰变量表示该变量是一个常量不能被重新赋值。
+* finally一般作用在try-catch代码块中，在处理异常的时候，通常我们将一定要执行的代码方法finally代码块中，表示不管是否出现异常，该代码块都会执行，一般用来存放一些关闭资源的代码。
+* finalize是一个方法，属于Object类的一个方法，而Object类是所有类的父类，Java 中允许使用 finalize()方法在垃圾收集器将对象从内存中清除出去之前做必要的清理工作。
+## 6. NoClassDefFoundError 和 ClassNotFoundException 区别？
+
+NoClassDefFoundError 是一个 Error 类型的异常，是由 JVM 引起的，不应该尝试捕获这个异常。
+
+引起该异常的原因是 JVM 或 ClassLoader 尝试加载某类时在内存中找不到该类的定义，该动作发生在运行期间，即编译时该类存在，但是在运行时却找不到了，可能是变异后被删除了等原因导致；
+
+ClassNotFoundException 是一个受查异常，需要显式地使用 try-catch 对其进行捕获和处理，或在方法签名中用 throws 关键字进行声明。当使用 Class.forName, ClassLoader.loadClass 或 ClassLoader.findSystemClass 动态加载类到内存的时候，通过传入的类路径参数没有找到该类，就会抛出该异常；另一种抛出该异常的可能原因是某个类已经由一个类加载器加载至内存中，另一个加载器又尝试去加载它。
+
+## 7. try-catch-finally 中哪个部分可以省略？
+
+答：catch 可以省略
+
+**原因**
+
+更为严格的说法其实是：try只适合处理运行时异常，try+catch适合处理运行时异常+普通异常。也就是说，如果你只用try去处理普通异常却不加以catch处理，编译是通不过的，因为编译器硬性规定，普通异常如果选择捕获，则必须用catch显示声明以便进一步处理。而运行时异常在编译时没有如此规定，所以catch可以省略，你加上catch编译器也觉得无可厚非。
+
+理论上，编译器看任何代码都不顺眼，都觉得可能有潜在的问题，所以你即使对所有代码加上try，代码在运行期时也只不过是在正常运行的基础上加一层皮。但是你一旦对一段代码加上try，就等于显示地承诺编译器，对这段代码可能抛出的异常进行捕获而非向上抛出处理。如果是普通异常，编译器要求必须用catch捕获以便进一步处理；如果运行时异常，捕获然后丢弃并且+finally扫尾处理，或者加上catch捕获以便进一步处理。
+
+至于加上finally，则是在不管有没捕获异常，都要进行的“扫尾”处理。
+
+## 8. try-catch-finally 中，如果 catch 中 return 了，finally 还会执行吗？
+
+答：会执行，在 return 前执行。
+
+注意：在 finally 中改变返回值的做法是不好的，因为如果存在 finally 代码块，try中的 return 语句不会立马返回调用者，而是记录下返回值待 finally 代码块执行完毕之后再向调用者返回其值，然后如果在 finally 中修改了返回值，就会返回修改后的值。显然，在 finally 中返回或者修改返回值会对程序造成很大的困扰，C#中直接用编译错误的方式来阻止程序员干这种龌龊的事情，Java 中也可以通过提升编译器的语法检查级别来产生警告或错误。
+
+代码示例1：
+
+```
+public static int getInt() {
+    int a = 10;
+    try {
+        System.out.println(a / 0);
+        a = 20;
+    } catch (ArithmeticException e) {
+        a = 30;
+        return a;
+        /*
+         * return a 在程序执行到这一步的时候，这里不是return a 而是 return 30；这个返回路径就形成了
+         * 但是呢，它发现后面还有finally，所以继续执行finally的内容，a=40
+         * 再次回到以前的路径,继续走return 30，形成返回路径之后，这里的a就不是a变量了，而是常量30
+         */
+    } finally {
+        a = 40;
+    }
+	return a;
+}
+```
+执行结果：30
+代码示例2：
+
+```
+public static int getInt() {
+    int a = 10;
+    try {
+        System.out.println(a / 0);
+        a = 20;
+    } catch (ArithmeticException e) {
+        a = 30;
+        return a;
+    } finally {
+        a = 40;
+        //如果这样，就又重新形成了一条返回路径，由于只能通过1个return返回，所以这里直接返回40
+        return a; 
+    }
+}
+```
+执行结果：40
+## 9. 类 ExampleA 继承 Exception，类 ExampleB 继承ExampleA。
+
+有如下代码片断：
+
+```
+try {
+	throw new ExampleB("b")
+} catch（ExampleA e）{
+	System.out.println("ExampleA");
+} catch（Exception e）{
+	System.out.println("Exception");
+}
+```
+请问执行此段代码的输出是什么？
+答：
+
+输出：ExampleA。（根据里氏代换原则[能使用父类型的地方一定能使用子类型]，抓取 ExampleA 类型异常的 catch 块能够抓住 try 块中抛出的 ExampleB 类型的异常）
+
+面试题 - 说出下面代码的运行结果。
+
+```
+class Annoyance extends Exception {
+}
+class Sneeze extends Annoyance {
+}
+class Human {
+	public static void main(String[] args)
+	throws Exception {
+		try {
+			try {
+				throw new Sneeze();
+			} catch ( Annoyance a ) {
+				System.out.println("Caught Annoyance");
+				throw a;
+			}
+		} catch ( Sneeze s ) {
+			System.out.println("Caught Sneeze");
+			return ;
+		} finally {
+			System.out.println("Hello World!");
+		}
+	}
+}
+```
+结果
+```
+Caught Annoyance
+Caught Sneeze
+Hello World!
+```
+## 10. 常见的 RuntimeException 有哪些？
+
+* ClassCastException(类转换异常)
+* IndexOutOfBoundsException(数组越界)
+* NullPointerException(空指针)
+* ArrayStoreException(数据存储异常，操作数组时类型不一致)
+* 还有IO操作的BufferOverflowException异常
+## 11. Java常见异常有哪些
+
+java.lang.IllegalAccessError：违法访问错误。当一个应用试图访问、修改某个类的域（Field）或者调用其方法，但是又违反域或方法的可见性声明，则抛出该异常。
+
+java.lang.InstantiationError：实例化错误。当一个应用试图通过Java的new操作符构造一个抽象类或者接口时抛出该异常.
+
+java.lang.OutOfMemoryError：内存不足错误。当可用内存不足以让Java虚拟机分配给一个对象时抛出该错误。
+
+java.lang.StackOverflowError：堆栈溢出错误。当一个应用递归调用的层次太深而导致堆栈溢出或者陷入死循环时抛出该错误。
+
+java.lang.ClassCastException：类造型异常。假设有类A和B（A不是B的父类或子类），O是A的实例，那么当强制将O构造为类B的实例时抛出该异常。该异常经常被称为强制类型转换异常。
+
+java.lang.ClassNotFoundException：找不到类异常。当应用试图根据字符串形式的类名构造类，而在遍历CLASSPAH之后找不到对应名称的class文件时，抛出该异常。
+
+java.lang.ArithmeticException：算术条件异常。譬如：整数除零等。
+
+java.lang.ArrayIndexOutOfBoundsException：数组索引越界异常。当对数组的索引值为负数或大于等于数组大小时抛出。
+
+java.lang.IndexOutOfBoundsException：索引越界异常。当访问某个序列的索引值小于0或大于等于序列大小时，抛出该异常。
+
+java.lang.InstantiationException：实例化异常。当试图通过newInstance()方法创建某个类的实例，而该类是一个抽象类或接口时，抛出该异常。
+
+java.lang.NoSuchFieldException：属性不存在异常。当访问某个类的不存在的属性时抛出该异常。
+
+java.lang.NoSuchMethodException：方法不存在异常。当访问某个类的不存在的方法时抛出该异常。
+
+java.lang.NullPointerException：空指针异常。当应用试图在要求使用对象的地方使用了null时，抛出该异常。譬如：调用null对象的实例方法、访问null对象的属性、计算null对象的长度、使用throw语句抛出null等等。
+
+java.lang.NumberFormatException：数字格式异常。当试图将一个String转换为指定的数字类型，而该字符串确不满足数字类型要求的格式时，抛出该异常。
+
+java.lang.StringIndexOutOfBoundsException：字符串索引越界异常。当使用索引值访问某个字符串中的字符，而该索引值小于0或大于等于序列大小时，抛出该异常。
+
+# 四、Java异常处理最佳实践
+
+在 Java 中处理异常并不是一个简单的事情。不仅仅初学者很难理解，即使一些有经验的开发者也需要花费很多时间来思考如何处理异常，包括需要处理哪些异常，怎样处理等等。这也是绝大多数开发团队都会制定一些规则来规范进行异常处理的原因。而团队之间的这些规范往往是截然不同的。
+
+本文给出几个被很多团队使用的异常处理最佳实践。
+
+## 1. 在 finally 块中清理资源或者使用 try-with-resource 语句
+
+当使用类似InputStream这种需要使用后关闭的资源时，一个常见的错误就是在try块的最后关闭资源。
+
+```
+public void doNotCloseResourceInTry() {
+    FileInputStream inputStream = null;
+    try {
+        File file = new File("./tmp.txt");
+        inputStream = new FileInputStream(file);
+        // use the inputStream to read a file
+        // do NOT do this
+        inputStream.close();
+    } catch (FileNotFoundException e) {
+        log.error(e);
+    } catch (IOException e) {
+        log.error(e);
+    }
+}
+```
+问题就是，只有没有异常抛出的时候，这段代码才可以正常工作。try 代码块内代码会正常执行，并且资源可以正常关闭。但是，使用 try 代码块是有原因的，一般调用一个或多个可能抛出异常的方法，而且，你自己也可能会抛出一个异常，这意味着代码可能不会执行到 try 代码块的最后部分。结果就是，你并没有关闭资源。
+所以，你应该把清理工作的代码放到 finally 里去，或者使用 try-with-resource 特性。
+
+### ①. 使用 finally 代码块
+
+与前面几行 try 代码块不同，finally 代码块总是会被执行。不管 try 代码块成功执行之后还是你在 catch 代码块中处理完异常后都会执行。因此，你可以确保你清理了所有打开的资源。
+
+```
+public void closeResourceInFinally() {
+    FileInputStream inputStream = null;
+    try {
+        File file = new File("./tmp.txt");
+        inputStream = new FileInputStream(file);
+        // use the inputStream to read a file
+    } catch (FileNotFoundException e) {
+        log.error(e);
+    } finally {
+        if (inputStream != null) {
+            try {
+                inputStream.close();
+            } catch (IOException e) {
+                log.error(e);
+            }
+        }
+    }
+}
+```
+### ②.  Java 7 的 try-with-resource 语法
+
+如果你的资源实现了 AutoCloseable 接口，你可以使用这个语法。大多数的 Java 标准资源都继承了这个接口。当你在 try 子句中打开资源，资源会在 try 代码块执行后或异常处理后自动关闭。
+
+```
+public void automaticallyCloseResource() {
+    File file = new File("./tmp.txt");
+    try (FileInputStream inputStream = new FileInputStream(file);) {
+        // use the inputStream to read a file
+    } catch (FileNotFoundException e) {
+        log.error(e);
+    } catch (IOException e) {
+        log.error(e);
+    }
+}
+```
+## 2. 优先明确的异常
+
+你抛出的异常越明确越好，永远记住，你的同事或者几个月之后的你，将会调用你的方法并且处理异常。
+
+因此需要保证提供给他们尽可能多的信息。这样你的 API 更容易被理解。你的方法的调用者能够更好的处理异常并且避免额外的检查。
+
+因此，总是尝试寻找最适合你的异常事件的类，例如，抛出一个 NumberFormatException 来替换一个 IllegalArgumentException 。避免抛出一个不明确的异常。
+
+```
+public void doNotDoThis() throws Exception {
+    ...
+}
+public void doThis() throws NumberFormatException {
+    ...
+}
+```
+## 3. 对异常进行文档说明
+
+当在方法上声明抛出异常时，也需要进行文档说明。目的是为了给调用者提供尽可能多的信息，从而可以更好地避免或处理异常。
+
+在 Javadoc 添加 @throws 声明，并且描述抛出异常的场景。
+
+```
+public void doSomething(String input) throws MyBusinessException {
+    ...
+}
+```
+## 4. 使用描述性消息抛出异常
+
+在抛出异常时，需要尽可能精确地描述问题和相关信息，这样无论是打印到日志中还是在监控工具中，都能够更容易被人阅读，从而可以更好地定位具体错误信息、错误的严重程度等。
+
+但这里并不是说要对错误信息长篇大论，因为本来 Exception 的类名就能够反映错误的原因，因此只需要用一到两句话描述即可。
+
+如果抛出一个特定的异常，它的类名很可能已经描述了这种错误。所以，你不需要提供很多额外的信息。一个很好的例子是 NumberFormatException 。当你以错误的格式提供 String 时，它将被 java.lang.Long 类的构造函数抛出。
+
+```
+try {
+    new Long("xyz");
+} catch (NumberFormatException e) {
+    log.error(e);
+}
+```
+## 5. 优先捕获最具体的异常
+
+大多数 IDE 都可以帮助你实现这个最佳实践。当你尝试首先捕获较不具体的异常时，它们会报告无法访问的代码块。
+
+但问题在于，只有匹配异常的第一个 catch 块会被执行。 因此，如果首先捕获 IllegalArgumentException ，则永远不会到达应该处理更具体的 NumberFormatException 的 catch 块，因为它是 IllegalArgumentException 的子类。
+
+总是优先捕获最具体的异常类，并将不太具体的 catch 块添加到列表的末尾。
+
+你可以在下面的代码片断中看到这样一个 try-catch 语句的例子。 第一个 catch 块处理所有 NumberFormatException 异常，第二个处理所有非 NumberFormatException 异常的IllegalArgumentException 异常。
+
+```
+public void catchMostSpecificExceptionFirst() {
+    try {
+        doSomething("A message");
+    } catch (NumberFormatException e) {
+        log.error(e);
+    } catch (IllegalArgumentException e) {
+        log.error(e)
+    }
+}
+```
+## 6. 不要捕获 Throwable 类
+
+Throwable 是所有异常和错误的超类。你可以在 catch 子句中使用它，但是你永远不应该这样做！
+
+如果在 catch 子句中使用 Throwable ，它不仅会捕获所有异常，也将捕获所有的错误。JVM 抛出错误，指出不应该由应用程序处理的严重问题。 典型的例子是 OutOfMemoryError 或者 StackOverflowError 。两者都是由应用程序控制之外的情况引起的，无法处理。
+
+所以，最好不要捕获 Throwable ，除非你确定自己处于一种特殊的情况下能够处理错误。
+
+```
+public void doNotCatchThrowable() {
+    try {
+        // do something
+    } catch (Throwable t) {
+        // don't do this!
+    }
+}
+```
+## 7. 不要忽略异常
+
+很多时候，开发者很有自信不会抛出异常，因此写了一个catch块，但是没有做任何处理或者记录日志。
+
+```
+public void doNotIgnoreExceptions() {
+    try {
+        // do something
+    } catch (NumberFormatException e) {
+        // this will never happen
+    }
+}
+```
+但现实是经常会出现无法预料的异常，或者无法确定这里的代码未来是不是会改动(删除了阻止异常抛出的代码)，而此时由于异常被捕获，使得无法拿到足够的错误信息来定位问题。
+合理的做法是至少要记录异常的信息。
+
+```
+public void logAnException() {
+    try {
+        // do something
+    } catch (NumberFormatException e) {
+        log.error("This should never happen: " + e);
+    }
+}
+```
+## 8. 不要记录并抛出异常
+
+这可能是本文中最常被忽略的最佳实践。可以发现很多代码甚至类库中都会有捕获异常、记录日志并再次抛出的逻辑。如下：
+
+```
+try {
+    new Long("xyz");
+} catch (NumberFormatException e) {
+    log.error(e);
+    throw e;
+}
+```
+这个处理逻辑看着是合理的。但这经常会给同一个异常输出多条日志。如下：
+```
+17:44:28,945 ERROR TestExceptionHandling:65 - java.lang.NumberFormatException: For input string: "xyz"
+Exception in thread "main" java.lang.NumberFormatException: For input string: "xyz"
+at java.lang.NumberFormatException.forInputString(NumberFormatException.java:65)
+at java.lang.Long.parseLong(Long.java:589)
+at java.lang.Long.(Long.java:965)
+at com.stackify.example.TestExceptionHandling.logAndThrowException(TestExceptionHandling.java:63)
+at com.stackify.example.TestExceptionHandling.main(TestExceptionHandling.java:58)
+```
+如上所示，后面的日志也没有附加更有用的信息。如果想要提供更加有用的信息，那么可以将异常包装为自定义异常。
+```
+public void wrapException(String input) throws MyBusinessException {
+    try {
+        // do something
+    } catch (NumberFormatException e) {
+        throw new MyBusinessException("A message that describes the error.", e);
+    }
+}
+```
+因此，仅仅当想要处理异常时才去捕获，否则只需要在方法签名中声明让调用者去处理。
+## 9. 包装异常时不要抛弃原始的异常
+
+捕获标准异常并包装为自定义异常是一个很常见的做法。这样可以添加更为具体的异常信息并能够做针对的异常处理。
+
+在你这样做时，请确保将原始异常设置为原因（注：参考下方代码 NumberFormatException e 中的原始异常 e ）。Exception 类提供了特殊的构造函数方法，它接受一个 Throwable 作为参数。否则，你将会丢失堆栈跟踪和原始异常的消息，这将会使分析导致异常的异常事件变得困难。
+
+```
+public void wrapException(String input) throws MyBusinessException {
+    try {
+        // do something
+    } catch (NumberFormatException e) {
+        throw new MyBusinessException("A message that describes the error.", e);
+    }
+}
+```
+## 10. 不要使用异常控制程序的流程
+
+不应该使用异常控制应用的执行流程，例如，本应该使用if语句进行条件判断的情况下，你却使用异常处理，这是非常不好的习惯，会严重影响应用的性能。
+
+## 11. 使用标准异常
+
+如果使用内建的异常可以解决问题，就不要定义自己的异常。Java API 提供了上百种针对不同情况的异常类型，在开发中首先尽可能使用 Java API 提供的异常，如果标准的异常不能满足你的要求，这时候创建自己的定制异常。尽可能得使用标准异常有利于新加入的开发者看懂项目代码。
+
+## 12. 异常会影响性能
+
+异常处理的性能成本非常高，每个 Java 程序员在开发时都应牢记这句话。创建一个异常非常慢，抛出一个异常又会消耗1~5ms，当一个异常在应用的多个层级之间传递时，会拖累整个应用的性能。
+
+* 仅在异常情况下使用异常；
+* 在可恢复的异常情况下使用异常；
+
+尽管使用异常有利于 Java 开发，但是在应用中最好不要捕获太多的调用栈，因为在很多情况下都不需要打印调用栈就知道哪里出错了。因此，异常消息应该提供恰到好处的信息。
+
+## 13. 总结
+
+综上所述，当你抛出或捕获异常的时候，有很多不同的情况需要考虑，而且大部分事情都是为了改善代码的可读性或者 API 的可用性。
+
+异常不仅仅是一个错误控制机制，也是一个通信媒介。因此，为了和同事更好的合作，一个团队必须要制定出一个最佳实践和规则，只有这样，团队成员才能理解这些通用概念，同时在工作中使用它。
+
+## 异常处理-阿里巴巴Java开发手册
+
+1. 【强制】Java 类库中定义的可以通过预检查方式规避的RuntimeException异常不应该通过catch 的方式来处理，比如：NullPointerException，IndexOutOfBoundsException等等。 说明：无法通过预检查的异常除外，比如，在解析字符串形式的数字时，可能存在数字格式错误，不得不通过catch NumberFormatException来实现。 正例：if (obj != null) {…} 反例：try { obj.method(); } catch (NullPointerException e) {…}
+2. 【强制】异常不要用来做流程控制，条件控制。 说明：异常设计的初衷是解决程序运行中的各种意外情况，且异常的处理效率比条件判断方式要低很多。
+3. 【强制】catch时请分清稳定代码和非稳定代码，稳定代码指的是无论如何不会出错的代码。对于非稳定代码的catch尽可能进行区分异常类型，再做对应的异常处理。 说明：对大段代码进行try-catch，使程序无法根据不同的异常做出正确的应激反应，也不利于定位问题，这是一种不负责任的表现。 正例：用户注册的场景中，如果用户输入非法字符，或用户名称已存在，或用户输入密码过于简单，在程序上作出分门别类的判断，并提示给用户。
+4. 【强制】捕获异常是为了处理它，不要捕获了却什么都不处理而抛弃之，如果不想处理它，请将该异常抛给它的调用者。最外层的业务使用者，必须处理异常，将其转化为用户可以理解的内容。
+5. 【强制】有try块放到了事务代码中，catch异常后，如果需要回滚事务，一定要注意手动回滚事务。
+6. 【强制】finally块必须对资源对象、流对象进行关闭，有异常也要做try-catch。 说明：如果JDK7及以上，可以使用try-with-resources方式。
+7. 【强制】不要在finally块中使用return。 说明：try块中的return语句执行成功后，并不马上返回，而是继续执行finally块中的语句，如果此处存在return语句，则在此直接返回，无情丢弃掉try块中的返回点。 反例：
+```
+private int x = 0;
+public int checkReturn() {
+    try {
+        // x等于1，此处不返回
+        return ++x;
+    } finally {
+        // 返回的结果是2
+        return ++x;
+    }
+}
+```
+8. 【强制】捕获异常与抛异常，必须是完全匹配，或者捕获异常是抛异常的父类。 说明：如果预期对方抛的是绣球，实际接到的是铅球，就会产生意外情况。
+9. 【强制】在调用RPC、二方包、或动态生成类的相关方法时，捕捉异常必须使用Throwable类来进行拦截。 说明：通过反射机制来调用方法，如果找不到方法，抛出NoSuchMethodException。什么情况会抛出NoSuchMethodError呢？二方包在类冲突时，仲裁机制可能导致引入非预期的版本使类的方法签名不匹配，或者在字节码修改框架（比如：ASM）动态创建或修改类时，修改了相应的方法签名。这些情况，即使代码编译期是正确的，但在代码运行期时，会抛出NoSuchMethodError。
+10. 【推荐】方法的返回值可以为null，不强制返回空集合，或者空对象等，必须添加注释充分说明什么情况下会返回null值。 说明：本手册明确防止NPE是调用者的责任。即使被调用方法返回空集合或者空对象，对调用者来说，也并非高枕无忧，必须考虑到远程调用失败、序列化失败、运行时异常等场景返回null的情况。
+11. 【推荐】防止NPE，是程序员的基本修养，注意NPE产生的场景： 1） 返回类型为基本数据类型，return包装数据类型的对象时，自动拆箱有可能产生NPE。 反例：public int f() { return Integer对象}， 如果为null，自动解箱抛NPE。 2） 数据库的查询结果可能为null。 3） 集合里的元素即使isNotEmpty，取出的数据元素也可能为null。 4） 远程调用返回对象时，一律要求进行空指针判断，防止NPE。 5） 对于Session中获取的数据，建议进行NPE检查，避免空指针。 6） 级联调用obj.getA().getB().getC()；一连串调用，易产生NPE。
+
+正例：使用JDK8的Optional类来防止NPE问题。
+
+1. 【推荐】定义时区分unchecked / checked 异常，避免直接抛出new RuntimeException()，更不允许抛出Exception或者Throwable，应使用有业务含义的自定义异常。推荐业界已定义过的自定义异常，如：DAOException / ServiceException等。
+2. 【参考】对于公司外的http/api开放接口必须使用“错误码”；而应用内部推荐异常抛出；跨应用间RPC调用优先考虑使用Result方式，封装isSuccess()方法、“错误码”、“错误简短信息”。 说明：关于RPC方法返回方式使用Result方式的理由： 1）使用抛异常返回方式，调用方如果没有捕获到就会产生运行时错误。 2）如果不加栈信息，只是new自定义异常，加入自己的理解的error message，对于调用端解决问题的帮助不会太多。如果加了栈信息，在频繁调用出错的情况下，数据序列化和传输的性能损耗也是问题。
+3. 【参考】避免出现重复的代码（Don’t Repeat Yourself），即DRY原则。 说明：随意复制和粘贴代码，必然会导致代码的重复，在以后需要修改时，需要修改所有的副本，容易遗漏。必要时抽取共性方法，或者抽象公共类，甚至是组件化。 正例：一个类中有多个public方法，都需要进行数行相同的参数校验操作，这个时候请抽取：
+```
+private boolean checkParam(DTO dto) {…}
+```
+
+
 
 
